--- a/app/views/posts/admin.html.erb
+++ b/app/views/posts/admin.html.erb
@@ -39,7 +39,7 @@
     </table>
     <label>목표달성률</label> <br>
     <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: <%= @post.orders.count*100/@post.goal %>%;" aria-valuenow="<%= @post.orders.count*100/@post.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @post.orders.count*100/@post.goal %>%</div>
+      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><%= @post.orders.count*100/@post.goal %>%</div>
     </div>
 </div>
 </div>
