--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,7 @@
     </table>
     <label>참여상황</label> <br>
     <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: <%= @post.orders.count*100/@post.goal %>%;" aria-valuenow="<%= @post.orders.count*100/@post.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @post.orders.count*100/@post.goal %>%</div>
+      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><%= @post.orders.count*100/@post.goal %>%</div>
     </div>
 
   <form class="form-group" action="/posts/<%=@post.id%>/order" method="post">
@@ -94,10 +94,10 @@
 <% end %>
 <hr />
 <h5>댓글</h5>
-<form action="/posts/<%= @post.id%>/comments" method="post" data-remote=true>
+<form action="/posts/<%= @post.id%>/comments" class="form-inline" method="post" data-remote=true>
   <input type="text" name="content" /><br />
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <input type="submit" />
+  <input type="submit" class: "btn btn-outline-secondary" />
 </form>
 <hr />
 
