--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,8 +60,8 @@
        <!-- <a class="nav-item nav-link" href="#">공구둘러보기</a> -->
        <a class="nav-item nav-link" href="#">서포트둘러보기</a>
        <!-- <a class="nav-item nav-link" href="posts/rank">랭킹보기</a> -->
-       <%= link_to '랭킹보기', posts_rank_path , class: "nav-item nav-link"%>
-       <%= link_to '마이페이지', posts_mypage_path, class: "nav-item nav-link" %>
+       <%= link_to '랭킹보기', ranks_rank_path , class: "nav-item nav-link"%>
+       <%= link_to '마이페이지', admins_mypage_path, class: "nav-item nav-link" %>
      </div>
    </div>
 </nav>
